--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
             { 
                 name: 'Penny', 
                 value: 0.01, 
-                imageUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/US_One_Cent_Obv.png/440px-US_One_Cent_Obv.png',
+                imageUrl: 'penny.png',
                 info: 'This is a Penny, worth 1 cent!'
             },
             { 
                 name: 'Nickel', 
                 value: 0.05, 
-                imageUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/2006_Nickel_Proof_Obv.png/440px-2006_Nickel_Proof_Obv.png',
+                imageUrl: 'nickel.png',
                 info: 'This is a Nickel, worth 5 cents!'
             },
             { 
                 name: 'Dime', 
                 value: 0.10, 
-                imageUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/2017-P_Roosevelt_dime_obverse_transparent.png/440px-2017-P_Roosevelt_dime_obverse_transparent.png',
+                imageUrl: 'dime.png',
                 info: 'This is a Dime, worth 10 cents!'
             },
             { 
                 name: 'Quarter', 
                 value: 0.25, 
-                imageUrl: 'https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/2006_Proof_Washington_Quarter_Obv.png/440px-2006_Proof_Washington_Quarter_Obv.png',
+                imageUrl: 'quarter.png',
                 info: 'This is a Quarter, worth 25 cents!'
             }
         ];
@@ -260,4 +260,5 @@
     </script>
 </body>
 </html>
+
 
