--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             { 
                 name: 'Nickel', 
                 value: 0.05, 
-                imageUrl: 'nickel.png',
+                imageUrl: 'nickel.jpg',
                 info: 'This is a Nickel, worth 5 cents!'
             },
             { 
@@ -260,5 +260,6 @@
     </script>
 </body>
 </html>
+
 
 
