--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 name: 'Nickel', 
                 value: 0.05, 
                 displayValue: '5¢',
-                imageUrl: 'nickel.png',
+                imageUrl: 'nickel.jpg',
                 info: 'This is a Nickel, worth 5 cents!'
             },
             { 
@@ -274,4 +274,5 @@
     </script>
 </body>
 </html>
+
 
